Added a folder for functions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button id="shareBtn" class="btn btn-primary"><i class="fa-brands fa-square-x-twitter"></i> &nbsp Share</button>
     </div>
   </div>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
   <script defer src="https://static.addtoany.com/menu/page.js"></script>
   <script src="https://kit.fontawesome.com/1cab35324f.js" crossorigin="anonymous"></script>
 </body>
